--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <title>%VITE_APP_NAME%</title>
   </head>
   <body>
+    <!-- Built: %BUILD_TIME% -->
     <div id="root"></div>
     <div id="modal-root"></div>
     <script type="module" src="/src/main.tsx"></script>
